--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": ">=5.3.0",
+    "php": ">=5.3.0|^8.0",
     "illuminate/support": "~5.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
     "gigablah/sphinxphp": "2.0.8"
   },
